--- a/Bulgogi/index.html
+++ b/Bulgogi/index.html
@@ -21,7 +21,9 @@
         </style>
         <img src="pfp.PNG" alt="logo" />
         <ul>
+          <a href="https://youtu.be/dQw4w9WgXcQ"></a>
           <li><a href="#">Hatdog1</a></li>
+        </a>
           <li><a href="#">Hatdog2</a></li>
           <li><a href="#">Hatdog3</a></li>
           <li><a href="#">Hatdog4</a></li>
@@ -29,28 +31,24 @@
       </div>
       <div class="content">
         <h1>Find your soulmate</h1>
-        <p>By Master Gerald</p>
+        <p>By Master Ghonix</p>
         <button data-modal-target="#modal">Enter<span></span></button>
         <div class="modal" id="modal">
           <div class="modal-header">
             <div class="title">Calculate if your crush likes you!</div>
             <div class="box">
-              <form>
                 <br />
                 <input type="text" id="fname" placeholder="Your name..." />
                 <a href="https://youtu.be/dQw4w9WgXcQ">
-                  <input type="submit" id="btn" value="Calculate!" />
+                  <button id="btn" data-modal-target="#modal">Calculate!<span></span></button>
                 </a>
             </div>
             <div class="box2">
-                <br />
                 <input type="text" id="cname" placeholder="Crush name..." />
-              </form>
               <script>
                 let movies = [];
                 // example {id:1592304983049, title: 'Deadpool', year: 2015}
                 const addMovie = (ev)=>{
-                    ev.preventDefault();  //to stop the form submitting
                     let movie = {
                         id: Date.now(),
                         Crush: document.getElementById('cname').value,
@@ -73,9 +71,11 @@
                 });
             </script>
             </div>
+            <a href="https://youtu.be/dQw4w9WgXcQ">
             <button data-close-button class="close-button">
               &times;<span></span>
             </button>
+          </a>
           </div>
           <div class="modal-body">Input your name</div>
         </div>
