--- a/Bulgogi/index.html
+++ b/Bulgogi/index.html
@@ -22,11 +22,11 @@
         <img src="pfp.PNG" alt="logo" />
         <ul>
           <a href="https://youtu.be/dQw4w9WgXcQ"></a>
-          <li><a href="#">Hatdog1</a></li>
+          <li><a href="#">Hatdog</a></li>
         </a>
-          <li><a href="#">Hatdog2</a></li>
-          <li><a href="#">Hatdog3</a></li>
-          <li><a href="#">Hatdog4</a></li>
+          <li><a href="#">Hatdog</a></li>
+          <li><a href="#">Hatdog</a></li>
+          <li><a href="#">Hatdog</a></li>
         </ul>
       </div>
       <div class="content">
